# PitchSide

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  exceptions.py
app/domain/: incident_rules.py  transit_planner.py  venue_graph.py  zone_load.py
app/routes/: api.py  pages.py
app/services/: archive.py  assistant.py  base.py  cache.py  city_routes.py  composer.py  gateway.py  interpreter.py  ledger.py  secrets.py  sentiment.py  translator.py
app/static/: app.js  style.css
app/templates/: index.html
docs/: ARCHITECTURE.md
tests/: conftest.py  test_api.py  test_city_routes.py  test_clients.py  test_domain.py  test_ledger.py  test_pages.py  test_resilience.py  test_services.py
